SEGURIDAD/UD 5 - Firewalls/Practicas guiadas/rules_focal_intro_seg_oscuridad.v4
# Generated by iptables-save v1.8.4 on Mon Apr 17 11:43:30 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -s 192.168.100.0/24 -d 172.16.0.0/16 -j ACCEPT
-A PREROUTING -d 192.0.2.254/32 -p tcp -m multiport --dports 80,443 -j DNAT --to-destination 172.16.0.2
-A PREROUTING -d 192.0.2.254/32 -p tcp -m tcp --dport 22000 -j DNAT --to-destination 172.16.0.2:22
-A POSTROUTING -s 192.168.100.0/24 -d 172.16.0.0/16 -j ACCEPT
-A POSTROUTING -s 192.168.100.0/24 -j SNAT --to-source 192.0.2.254
-A POSTROUTING -s 172.16.0.0/16 -j SNAT --to-source 192.0.2.254
COMMIT
# Completed on Mon Apr 17 11:43:30 2023
# Generated by iptables-save v1.8.4 on Mon Apr 17 11:43:30 2023
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Mon Apr 17 11:43:30 2023
# Generated by iptables-save v1.8.4 on Mon Apr 17 11:43:30 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:DNS - [0:0]
:DNS_DMZ - [0:0]
:DNS_INTRA - [0:0]
:REPOS - [0:0]
:REPOS_DMZ - [0:0]
:SNEAKY - [0:0]
:SSH - [0:0]
:SSH_SERVER - [0:0]
:WEB_INTRA - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -d 192.0.2.255/32 -j DROP
-A INPUT -d 172.16.255.255/32 -j DROP
-A INPUT -d 192.168.100.255/32 -j DROP
-A INPUT -d 255.255.255.255/32 -j DROP
-A INPUT -d 224.0.0.0/4 -j DROP
-A INPUT -i eth2 -j SNEAKY
-A INPUT -j NFLOG --nflog-prefix  "iptables: CleanUP Rule "
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -d 208.67.222.222/32 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j DNS_INTRA
-A FORWARD -d 208.67.220.220/32 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j DNS_INTRA
-A FORWARD -i eth1 -p tcp -m multiport --dports 80,443 -m conntrack --ctstate NEW -j WEB_INTRA
-A FORWARD -d 172.16.0.2/32 -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -d 8.8.8.8/32 -i eth2 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j DNS_DMZ
-A FORWARD -d 8.8.4.4/32 -i eth2 -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j DNS_DMZ
-A FORWARD -s 172.16.0.2/32 -i eth2 -o eth0 -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j REPOS_DMZ
-A FORWARD -d 172.16.0.2/32 -p tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -i eth2 -j SNEAKY
-A FORWARD -j NFLOG --nflog-prefix  "iptables: CleanUP Rule "
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m conntrack --ctstate NEW -j DNS
-A OUTPUT -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW -j REPOS
-A OUTPUT -j NFLOG --nflog-prefix  "iptables: CleanUP Rule "
-A DNS -d 8.8.8.8/32 -j ACCEPT
-A DNS -d 8.8.4.4/32 -j ACCEPT
-A DNS -j NFLOG --nflog-prefix  "iptables: DNS FW Bloqueo "
-A DNS -j DROP
-A DNS_DMZ -s 172.16.0.2/32 -j ACCEPT
-A DNS_DMZ -j NFLOG --nflog-prefix  "iptables: DNS DMZ Bloqueo "
-A DNS_DMZ -j DROP
-A DNS_INTRA -m iprange --src-range 192.168.100.1-192.168.100.200 -j ACCEPT
-A DNS_INTRA -j NFLOG --nflog-prefix  "iptables: DNS INTRA Bloqueo "
-A DNS_INTRA -j DROP
-A REPOS -d 185.125.190.39/32 -j ACCEPT
-A REPOS -d 185.125.190.36/32 -j ACCEPT
-A REPOS -d 91.189.91.38/32 -j ACCEPT
-A REPOS -d 91.189.91.39/32 -j ACCEPT
-A REPOS -d 91.189.91.38/32 -j ACCEPT
-A REPOS -d 185.125.190.39/32 -j ACCEPT
-A REPOS -d 185.125.190.36/32 -j ACCEPT
-A REPOS -d 91.189.91.39/32 -j ACCEPT
-A REPOS -d 91.189.91.15/32 -j ACCEPT
-A REPOS -d 185.125.188.87/32 -j ACCEPT
-A REPOS -d 185.125.188.12/32 -j ACCEPT
-A REPOS -j NFLOG --nflog-prefix  "iptables: REPOS FW Bloqueo "
-A REPOS -j DROP
-A REPOS_DMZ -d 91.189.91.39/32 -j ACCEPT
-A REPOS_DMZ -d 91.189.91.38/32 -j ACCEPT
-A REPOS_DMZ -d 185.125.190.36/32 -j ACCEPT
-A REPOS_DMZ -d 185.125.190.39/32 -j ACCEPT
-A REPOS_DMZ -d 91.189.91.39/32 -j ACCEPT
-A REPOS_DMZ -d 185.125.190.36/32 -j ACCEPT
-A REPOS_DMZ -d 185.125.190.39/32 -j ACCEPT
-A REPOS_DMZ -d 91.189.91.38/32 -j ACCEPT
-A REPOS_DMZ -d 185.125.188.12/32 -j ACCEPT
-A REPOS_DMZ -d 185.125.188.87/32 -j ACCEPT
-A REPOS_DMZ -d 91.189.91.15/32 -j ACCEPT
-A REPOS_DMZ -j NFLOG --nflog-prefix  "iptables: REPOS DMZ Bloqueo "
-A REPOS_DMZ -j DROP
-A SNEAKY -j NFLOG --nflog-prefix  "iptables: Sneaky Rule"
-A SNEAKY -j DROP
-A WEB_INTRA -s 192.168.100.1/32 -j ACCEPT
-A WEB_INTRA -s 192.168.100.2/32 -j ACCEPT
-A WEB_INTRA -m iprange --src-range 192.168.100.3-192.168.100.200 -m time --timestart 07:00:00 --timestop 15:00:00 --weekdays Mon,Tue,Wed,Thu,Fri --datestop 2038-01-19T03:14:07 --kerneltz -j ACCEPT
-A WEB_INTRA -j NFLOG --nflog-prefix  "iptables: WEB INTRA Bloqueo "
-A WEB_INTRA -j DROP
COMMIT
# Completed on Mon Apr 17 11:43:30 2023
